removed banner image, finished 3/4 of menus, and started dark mode script

--- a/breakfasts.html
+++ b/breakfasts.html
@@ -35,7 +35,7 @@
               <li><a class="dropdown-item" href="menus.html">All Menus</a>
                 <hr>
               </li>
-              <li><a class="dropdown-item dropdown-active" href="breakfasts.html">Breakfast Menu</a></li>
+              <li><a class="dropdown-item dropdown-current-page" href="breakfasts.html">Breakfast Menu</a></li>
               <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips & Jackets</a></li>
               <li><a class="dropdown-item" href="paninis_wraps_roasts.html">Paninis, Wraps & Roasts</a></li>
               <li><a class="dropdown-item" href="cold_fillings_salads.html">Cold Fillings & Salads</a></li>
@@ -52,306 +52,345 @@
     </div>
   </nav>
 
-  <div class="row p-0 m-0">
-    <img src="images/banner.jpg" class="w-100 banner" alt="Banner">
-    <div class="relative-absolute-position">
-      <p class="w-100 title-background"></p>
-      <h1 class="title">Breakfast Selection</h1>
-    </div>
+  <div>
+    <h1 class="title">Breakfasts!</h1>
   </div>
 
 
 
+  <section>
+    <div class="container menu-items">
+      <h2 class="menu-title pt-5">Breakfasts:</h2>
+      <div class="row">
+        <div class="col">
+          <h4>Bacon</h4>
+        </div>
+        <div class="col">
+          <h4>£3.60</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Sausage</h4>
+        </div>
+        <div class="col">
+          <h4>£3.60</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Bacon & Sausage</h4>
+        </div>
+        <div class="col">
+          <h4>£4.50</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Bacon & Egg</h4>
+        </div>
+        <div class="col">
+          <h4>£4.05</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Sausage & Egg</h4>
+        </div>
+        <div class="col">
+          <h4>£4.05</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Bacon, Sausage & Egg</h4>
+        </div>
+        <div class="col">
+          <h4>£4.95</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Bacon, Egg & Hash Brown</h4>
+        </div>
+        <div class="col">
+          <h4>£4.70</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Bacon & Scrambled Eggs</h4>
+        </div>
+        <div class="col">
+          <h4>£4.70</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Sausage & Scrambled Egg</h4>
+        </div>
+        <div class="col">
+          <h4>£4.70</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Sausage, Egg & Hash Browns</h4>
+        </div>
+        <div class="col">
+          <h4>£4.70</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Bacon, Sausage & Hash Brown</h4>
+        </div>
+        <div class="col">
+          <h4>£5.00</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Sausage, Egg & Black Pudding</h4>
+        </div>
+        <div class="col">
+          <h4>£4.70</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Bacon, Sausage & Black Pudding</h4>
+        </div>
+        <div class="col">
+          <h4>£5.00</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Bacon, Egg & Mushroom</h4>
+        </div>
+        <div class="col">
+          <h4>£4.90</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>bacon & Cheese</h4>
+        </div>
+        <div class="col">
+          <h4>£4.25</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Sausage & Cheese</h4>
+        </div>
+        <div class="col">
+          <h4>£4.25</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Sausage, Cheese & Onion</h4>
+        </div>
+        <div class="col">
+          <h4>£4.50</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Sausage, Bacon & Cheese</h4>
+        </div>
+        <div class="col">
+          <h4>£5.10</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Sausage, Bacon, Egg, Hash Brown, Mushroom & Black Pudding</h4>
+        </div>
+        <div class="col">
+          <h4>£6.40</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Veggie Sausage</h4>
+        </div>
+        <div class="col">
+          <h4>£3.60</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Veggie Sausage & Egg</h4>
+        </div>
+        <div class="col">
+          <h4>£4.05</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Double Egg & Mushrooms</h4>
+        </div>
+        <div class="col">
+          <h4>£4.70</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Veggie Sausage, Egg & hashbrowns</h4>
+        </div>
+        <div class="col">
+          <h4>£4.70</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Veggie Sausage, Cheese & Onion</h4>
+        </div>
+        <div class="col">
+          <h4>£4.50</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Egg, Mushrooms, Cheese & Hashbrowns</h4>
+        </div>
+        <div class="col">
+          <h4>£4.90</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Hashbrown & Fried Tomatoes</h4>
+        </div>
+        <div class="col">
+          <h4>£5.60</h4>
+        </div>
+      </div>
 
-  <div class="container menu-items">
-    <div class="row py-1">
-      <div class="col">
-        <h4>Bacon</h4>
-      </div>
-      <div class="col">
-        <h4>£3.60</h4>
-      </div>
-    </div>
-    <div class="row py-1">
-      <div class="col">
-        <h4>Sausage</h4>
-      </div>
-      <div class="col">
-        <h4>£3.60</h4>
-      </div>
-    </div>
-    <div class="row py-1">
-      <div class="col">
-        <h4>Bacon & Sausage</h4>
-      </div>
-      <div class="col">
-        <h4>£4.50</h4>
-      </div>
-    </div>
-    <div class="row py-1">
-      <div class="col">
-        <h4>Bacon & Egg</h4>
-      </div>
-      <div class="col">
-        <h4>£4.05</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Sausage & Egg</h4>
-      </div>
-      <div class="col">
-        <h4>£4.05</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Bacon, Sausage & Egg</h4>
-      </div>
-      <div class="col">
-        <h4>£4.95</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Bacon, Egg & Hash Brown</h4>
-      </div>
-      <div class="col">
-        <h4>£4.70</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Bacon & Scrambled Eggs</h4>
-      </div>
-      <div class="col">
-        <h4>£4.70</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Sausage & Scrambled Egg</h4>
-      </div>
-      <div class="col">
-        <h4>£4.70</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Sausage, Egg & Hash Browns</h4>
-      </div>
-      <div class="col">
-        <h4>£4.70</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Bacon, Sausage & Hash Brown</h4>
-      </div>
-      <div class="col">
-        <h4>£5.00</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Sausage, Egg & Black Pudding</h4>
-      </div>
-      <div class="col">
-        <h4>£4.70</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Bacon, Sausage & Black Pudding</h4>
-      </div>
-      <div class="col">
-        <h4>£5.00</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Bacon, Egg & Mushroom</h4>
-      </div>
-      <div class="col">
-        <h4>£4.90</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>bacon & Cheese</h4>
-      </div>
-      <div class="col">
-        <h4>£4.25</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Sausage & Cheese</h4>
-      </div>
-      <div class="col">
-        <h4>£4.25</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Sausage, Cheese & Onion</h4>
-      </div>
-      <div class="col">
-        <h4>£4.50</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Sausage, Bacon & Cheese</h4>
-      </div>
-      <div class="col">
-        <h4>£5.10</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Sausage, Bacon, Egg, Hash Brown, Mushroom & Black Pudding</h4>
-      </div>
-      <div class="col">
-        <h4>£6.40</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Veggie Sausage</h4>
-      </div>
-      <div class="col">
-        <h4>£3.60</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Veggie Sausage & Egg</h4>
-      </div>
-      <div class="col">
-        <h4>£4.05</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Double Egg & Mushrooms</h4>
-      </div>
-      <div class="col">
-        <h4>£4.70</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Veggie Sausage, Egg & hashbrowns</h4>
-      </div>
-      <div class="col">
-        <h4>£4.70</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Veggie Sausage, Cheese & Onion</h4>
-      </div>
-      <div class="col">
-        <h4>£4.50</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Egg, Mushrooms, Cheese & Hashbrowns</h4>
-      </div>
-      <div class="col">
-        <h4>£4.90</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Hashbrown & Fried Tomatoes</h4>
-      </div>
-      <div class="col">
-        <h4>£5.60</h4>
-      </div>
-    </div>
 
-    <h2 class="text-center m-0">Extras</h2>
-    <div class="row">
-      <div class="col">
-        <h4>Bacon per rasher</h4>
+
+      <h2 class="menu-title">Extras:</h2>
+      <div class="row">
+        <div class="col">
+          <h4>Bacon per rasher</h4>
+        </div>
+        <div class="col">
+          <h4>£0.80</h4>
+        </div>
       </div>
-      <div class="col">
-        <h4>£0.80</h4>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Black Pudding</h4>
+        </div>
+        <div class="col">
+          <h4>£0.80</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Hashbrowns</h4>
+        </div>
+        <div class="col">
+          <h4>£0.80</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Fried Egg</h4>
+        </div>
+        <div class="col">
+          <h4>£0.80</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Fried Tomatoes</h4>
+        </div>
+        <div class="col">
+          <h4>£0.60</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>mushrooms</h4>
+        </div>
+        <div class="col">
+          <h4>£0.80</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Onions</h4>
+        </div>
+        <div class="col">
+          <h4>£0.30</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Sausage</h4>
+        </div>
+        <div class="col">
+          <h4>£1.40</h4>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h4>Scrambled Eggs</h4>
+        </div>
+        <div class="col">
+          <h4>£1.40</h4>
+        </div>
+      </div>
+
+
+
+      <div class="menu-info">
+        <p class="mb-0">All HOT FOOD is inclusive of VAT</p>
       </div>
     </div>
-    <div class="row">
-      <div class="col">
-        <h4>Black Pudding</h4>
-      </div>
-      <div class="col">
-        <h4>£0.80</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Hashbrowns</h4>
-      </div>
-      <div class="col">
-        <h4>£0.80</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Fried Egg</h4>
-      </div>
-      <div class="col">
-        <h4>£0.80</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Fried Tomatoes</h4>
-      </div>
-      <div class="col">
-        <h4>£0.60</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>mushrooms</h4>
-      </div>
-      <div class="col">
-        <h4>£0.80</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Onions</h4>
-      </div>
-      <div class="col">
-        <h4>£0.30</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Sausage</h4>
-      </div>
-      <div class="col">
-        <h4>£1.40</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h4>Scrambled Eggs</h4>
-      </div>
-      <div class="col">
-        <h4>£1.40</h4>
-      </div>
-    </div>
-  </div>
+  </section>
 </body>
 
 
 <footer class="w-100 fixed-bottom">
-  <div class="p-3">
+  <div class="footer-content p-3">
     <a href="https://facebook.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/facebook.png"
         alt="Facebook Logo" width="25" height="25"> Facebook</a>
     <a href="https://twitter.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/twitter.png"
