--- a/catering.html
+++ b/catering.html
@@ -52,12 +52,8 @@
     </div>
   </nav>
 
-  <div class="row p-0 m-0">
-    <img src="images/banner.jpg" class="w-100 banner" alt="Banner">
-    <div class="relative-absolute-position">
-      <p class="w-100 title-background"></p>
-      <h1 class="title">Welcome to Loafers!</h1>
-    </div>
+  <div>
+    <h1 class="title">Catering!</h1>
   </div>
 
   <div class="container-fluid">
@@ -83,7 +79,7 @@
 
 
 <footer class="w-100 fixed-bottom">
-  <div class="p-3">
+  <div class="footer-content p-3">
     <a href="https://facebook.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/facebook.png"
         alt="Facebook Logo" width="25" height="25"> Facebook</a>
     <a href="https://twitter.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/twitter.png"
