--- a/contact.html
+++ b/contact.html
@@ -52,12 +52,8 @@
     </div>
   </nav>
 
-  <div class="row p-0 m-0">
-    <img src="images/banner.jpg" class="w-100 banner" alt="Banner">
-    <div class="relative-absolute-position">
-      <p class="w-100 title-background"></p>
-      <h1 class="title">Contact Us!</h1>
-    </div>
+  <div>
+    <h1 class="title">Contact Us!</h1>
   </div>
 
   <div class="container-fluid">
@@ -83,17 +79,17 @@
       <section class="form-area">
         <div class="container-fluid p-0 m-0">
           <div id="welcome-text">
-          <form onsubmit="changeText()" method="post" id="welcome-form">
-            <label>Please enter your name:</label><br>
-            <input type="text" placeholder="Enter name..." name="fname" required><br>
-            <br>
-            <label>Please enter your email:</label><br>
-            <input type="email" placeholder="Enter email..." required><br>
-            <br>
-            <label>Please enter your enquiry:</label><br>
-            <textarea cols="48" rows="12" placeholder="Message..."></textarea><br>
-            <input type="submit" value="Submit!">
-          </form>
+            <form onsubmit="changeText()" method="post" id="welcome-form">
+              <label>Please enter your name:</label><br>
+              <input type="text" placeholder="Enter name..." name="fname" required><br>
+              <br>
+              <label>Please enter your email:</label><br>
+              <input type="email" placeholder="Enter email..." required><br>
+              <br>
+              <label>Please enter your enquiry:</label><br>
+              <textarea cols="48" rows="12" placeholder="Enter enquiry..." required></textarea><br>
+              <input type="submit" value="Submit!">
+            </form>
           </div>
         </div>
       </section>
@@ -102,7 +98,7 @@
 
 
 <footer class="w-100 fixed-bottom">
-  <div class="p-3">
+  <div class="footer-content p-3">
     <a href="https://facebook.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/facebook.png"
         alt="Facebook Logo" width="25" height="25"> Facebook</a>
     <a href="https://twitter.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/twitter.png"
@@ -113,4 +109,5 @@
 <script src="scripts/scripts.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </html>
