--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="styles.css" rel="stylesheet">
-    <link rel="icon" href="images/sandwich_logo.png">
-    <title>Home</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="styles.css" rel="stylesheet">
+  <link rel="icon" href="images/sandwich_logo.png">
+  <title>Home</title>
 </head>
 
 
@@ -15,7 +17,8 @@
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Loafers Sandwhich Bar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse " id="navbarNav">
@@ -24,11 +27,14 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="menu.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="menu.html" id="navbarDropdownMenuLink" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
               Menus
             </a>
             <ul class="dropdown-menu nav-dropdown" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="menus.html">All Menus</a><hr></li>
+              <li><a class="dropdown-item" href="menus.html">All Menus</a>
+                <hr>
+              </li>
               <li><a class="dropdown-item" href="breakfasts.html">Breakfast Menu</a></li>
               <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips & Jackets</a></li>
               <li><a class="dropdown-item" href="paninis_wraps_roasts.html">Paninis, Wraps & Roasts</a></li>
@@ -42,27 +48,35 @@
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
+        <div class="ms-auto">
+          <div id="account" class="btn btn-primary mx-3 rounded" onclick="toggleDark()">My Account</div>
+        </div>
+        
       </div>
     </div>
   </nav>
 
-  <div class="row p-0 m-0">
-    <img src="images/banner.jpg" class="w-100 banner" alt="Banner">
-    <div class="relative-absolute-position">
-      <p class="w-100 title-background"></p>
-      <h1 class="title">Welcome to Loafers!</h1>
-    </div>
+  <div>
+    <h1 class="title">Welcome to Loafers!</h1>
   </div>
+
+
+
 
   <div class="container-fluid">
     <div class="page-content">
-      <p class="py-3">Situated in Somerset's county town of Taunton, Loafers has been open since 1978 and is still offering a great selection of hot and cold food from our shop located on the historic Bath Place.</p>
-      <p class="py-3">Come and visit us for a great selection of breakfast rolls, daily roasts, burgers, paninis, wraps, plus various cold fillings served from our salad bar.</p>
+      <p class="py-3">Situated in Somerset's county town of Taunton, Loafers has been open since 1978 and is still
+        offering a great selection of hot and cold food from our shop located on the historic Bath Place.</p>
+      <p class="py-3">Come and visit us for a great selection of breakfast rolls, daily roasts, burgers, paninis, wraps,
+        plus various cold fillings served from our salad bar.</p>
       <p class="pt-5 text-decoration-underline">Our Loyalty Scheme</p>
-      <p>We give your card a stamp when you come in and get some food and when it's full bring it back in on your next visit and you can have a little treat on us.</p>
+      <p>We give your card a stamp when you come in and get some food and when it's full bring it back in on your next
+        visit and you can have a little treat on us.</p>
       <img id="loyalty-card" class="pb-3" src="images/loyalty_stamp.jpg" alt="Loyalty stamps">
       <p class="pt-5 m-0 text-decoration-underline">Allegen Information</p>
-      <p>Please be aware that some of our products may contain one or more of the 14 main allergens that can be harmful if eaten, if you are ordering over the telephone or are visiting the shop, please make the member of staff you talk to aware of any specific allergens or other dietary requirement.</p>
+      <p>Please be aware that some of our products may contain one or more of the 14 main allergens that can be harmful
+        if eaten, if you are ordering over the telephone or are visiting the shop, please make the member of staff you
+        talk to aware of any specific allergens or other dietary requirement.</p>
     </div>
   </div>
 
@@ -72,12 +86,16 @@
 
 
 <footer class="w-100 fixed-bottom">
-  <div class="p-3">
-    <a href="https://facebook.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/facebook.png" alt="Facebook Logo" width="25" height="25"> Facebook</a>
-    <a href="https://twitter.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/twitter.png" alt="Twitter Logo" width="25" height="25"> Twitter</a>
+  <div class="footer-content p-3">
+    <a href="https://facebook.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/facebook.png"
+        alt="Facebook Logo" width="25" height="25"> Facebook</a>
+    <a href="https://twitter.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/twitter.png"
+        alt="Twitter Logo" width="25" height="25"> Twitter</a>
   </div>
 </footer>
 
 <script src="scripts/scripts.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </html>
